      shell globbing with curly braces).
  * Drop more unused code in nx-X11/programs/Xserver/hw/. Do this in
    roll-tarball.sh and in debian/rules alike.
  * Stop shipping unused / very old xterm code.
  * Drop nx-X11/programs/Xserver/hw/xfree86 except of four files symlinked
    to other locations in the source tree at build time.

  [ Horst Schirmeier ]
  * Update 320_nxagent_configurable-keystrokes.full.patch. Fix a typo that
    prevented the /etc/nxagent/keystrokes.cfg file from being parsed. (Fixes:
    #741).
  * Add 321_nxagent_x2go-specific-keystroke-config.full.patch. If nxagent is
    launched as x2goagent, use X2Go-specific paths for the keystrokes.cfg file.
    (Fixes: #744).

  [ Mihai Moldovan ]
  * Change string "X2go" to "X2Go" where appropriate.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 13 Nov 2014 21:59:00 +0100

nx-libs (2:3.5.0.28-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * Provide COPYING file in tarball. Update debian/copyright.
  * Add 025_nxcomp-fix-ftbfs-against-jpeg9a.full+lite.patch. Fix FTBFS when
    built against libjpeg9a. Thanks to Gabriel Marcano for sending this in.
    (Fixes: #578).
  * Update 027_nxcomp_abstract-X11-socket.full+lite: Add patch header
    (Description: and Author: field).
  * Add 607_nxcomp_macosx-X11-launcher-in-private-tmp.full+lite.patch. Fix check
    for launchd socket path in $DISPLAY on recent Mac OS X systems.
  * Rename 605_nxcomp_Types.h-dont-use-STL-internals-on-libc++.full.patch to
    605_nxcomp_Types.h-dont-use-STL-internals-on-libc++.full+lite.patch. It is
    an nxcomp patch that needs to be applied in the nx-libs-lite _and_ the
    nx-libs-full tarball release.
  * debian/libnx-x11.postinst:
    + Don't use dpkg-architecture (bin:package dpkg-dev) in postinst script.
      Instead prep a libnx-x11.postinst script at build time. (Fixes:
      #621).
  * debian/rules:
    + No such option for dh_auto_build: --with quilt."
  * nx-libs.spec: